--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             -webkit-transform: translateZ(0);
             transform: translateZ(0);
         }
+        
         .nav-link {
             transition: all 0.3s ease;
             position: relative;
@@ -148,7 +149,7 @@
                     <div class="w-12 h-12 rounded-full bg-yellow-200 flex items-center justify-center mr-3">
                         <i class="fas fa-chalkboard-teacher text-blue-600 text-xl"></i>
                     </div>
-                    <h1 class="text-2xl font-bold text-white">Ушакова Татьяна Сергеевна</h1>
+                    <h1 class="text-2xl font-bold text-white">Ковалёва Анна Сергеевна </h1>
                 </div>
                 
                 <nav class="flex flex-wrap justify-center gap-4 md:gap-8">
@@ -178,7 +179,7 @@
                         <div class="w-full h-full bg-white rounded overflow-hidden">
                             <!-- Заглушка для фото, можно заменить на реальное фото -->
                             <div class="w-full h-full bg-indigo-200 flex items-center justify-center">
-                                <i class="fas fa-user text-6xl text-indigo-600"></i>
+                                <img src="./hero.jpg" alt="hero-photo">
                             </div>
                         </div>
                         <div class="absolute -bottom-4 -right-4 bg-yellow-300 text-indigo-800 px-4 py-2 rounded-full font-bold shadow-lg">
@@ -746,7 +747,7 @@
                         <div class="w-10 h-10 rounded-full bg-yellow-300 flex items-center justify-center mr-3">
                             <i class="fas fa-chalkboard-teacher text-indigo-700"></i>
                         </div>
-                        <div class="text-xl font-bold">Ушакова Т.С.</div>
+                        <div class="text-xl font-bold">Ковалева А.С.</div>
                     </div>
                     <div class="text-indigo-300 mt-2">Дефектолог-логопед</div>
                 </div>
