--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Логопедическая игротека | Ковалева Т.С.</title>
+    <title>Логопедическая игротека | Кузнецова Екатерина Игоревна</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -149,7 +149,7 @@
                     <div class="w-12 h-12 rounded-full bg-yellow-200 flex items-center justify-center mr-3">
                         <i class="fas fa-chalkboard-teacher text-blue-600 text-xl"></i>
                     </div>
-                    <h1 class="text-2xl font-bold text-white">Ковалёва Анна Сергеевна </h1>
+                    <h1 class="text-2xl font-bold text-white">Кузнецова Екатерина Игоревна </h1>
                 </div>
                 
                 <nav class="flex flex-wrap justify-center gap-4 md:gap-8">
@@ -747,7 +747,7 @@
                         <div class="w-10 h-10 rounded-full bg-yellow-300 flex items-center justify-center mr-3">
                             <i class="fas fa-chalkboard-teacher text-indigo-700"></i>
                         </div>
-                        <div class="text-xl font-bold">Ковалева А.С.</div>
+                        <div class="text-xl font-bold">Кузнецова Е.И.</div>
                     </div>
                     <div class="text-indigo-300 mt-2">Дефектолог-логопед</div>
                 </div>
