--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="w-24 h-1 bg-yellow-400 mb-6"></div>
                     
                     <div class="space-y-4 text-indigo-800">
-                        <p>Я, Ушакова Татьяна Сергеевна, дефектолог-логопед с 12-летним опытом работы с детьми.</p>
+                        <p>Я, Кузнецова Екатерина Игоревна, дефектолог-логопед с 12-летним опытом работы с детьми.</p>
                         <p>Окончила Московский педагогический государственный университет по специальности "Логопедия", прошла множество курсов повышения квалификации.</p>
                         <p>Специализируюсь на коррекции звукопроизношения, развитии фонематического слуха, преодолении задержки речевого развития.</p>
                         <p>В работе использую современные методики и авторские разработки, адаптируя их под каждого ребенка.</p>
